# ThrEll

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  libthrell.c  libthrell.pc.in  main.c  threll-test.pc.in  threll.c  threll.h  threll_test_config
